--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,6 +12,7 @@ RUN npm install
 RUN npm install redux react-redux
 RUN npm install @reduxjs/toolkit react-redux
 RUN npm install react-router-dom
+RUN npm install @mui/material @emotion/react @emotion/styled
 # Copy the rest of your application files
 COPY . .
  
