--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -13,6 +13,7 @@ RUN npm install redux react-redux
 RUN npm install @reduxjs/toolkit react-redux
 RUN npm install react-router-dom
 RUN npm install @mui/material @emotion/react @emotion/styled
+RUN npm install @mui/icons-material
 # Copy the rest of your application files
 COPY . .
  
