Add DB and implement auth

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,19 @@ services:
     volumes:
       - ./backend:/app
       - /app/node_modules
+    environment:
+      - MONGO_URL=mongodb://mongo:27017/mydatabase
+    depends_on:
+      - mongo
+
+  mongo:
+    image: mongo:6
+    container_name: mongodb
+    restart: always
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+
+volumes:
+  mongo-data:
