--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "src/App.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --reporter mochawesome",
     "start": "nodemon src/App.js",
     "format": "prettier --write ."
   },
@@ -14,13 +14,20 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "chai": "^5.2.0",
+    "chai-http": "^5.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^11.7.1",
+    "mochawesome": "^7.1.3",
     "mongoose": "^8.16.0",
     "path": "^0.12.7",
+    "sinon": "^21.0.0",
+    "sinon-express-mock": "^2.2.1",
+    "supertest": "^7.1.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
