--- a/backend/.prettierrc
+++ b/backend/.prettierrc
@@ -5,6 +5,7 @@
   "printWidth": 80,
   "trailingComma": "es5",
   "arrowParens": "always",
+  "quoteProps": "preserve",
   "htmlWhitespaceSensitivity": "css",
   "jsxBracketSameLine": false,
   "jsxSingleQuote": false,
