--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,14 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.1.1",
     "@mui/x-charts": "^8.5.0",
+    "@mui/x-date-pickers": "^8.9.0",
     "@react-spring/three": "^10.0.1",
     "@react-three/drei": "^10.1.2",
     "@react-three/fiber": "^9.1.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
